// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio mcp --help 1`] = `
"mio mcp

manage MCP (Model Context Protocol) servers

Commands:
  mio mcp add            add an MCP server
  mio mcp list           list MCP servers and their status                             [aliases: ls]
  mio mcp auth [name]    authenticate with an OAuth-enabled MCP server
  mio mcp logout [name]  remove OAuth credentials for an MCP server
  mio mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio agent --help 1`] = `
"mio agent

manage agents

Commands:
  mio agent create  create a new agent
  mio agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio serve --help 1`] = `
"mio serve

starts a headless Mio server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: mio.local)
                                                                     [string] [default: "mio.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio debug --help 1`] = `
"mio debug

debugging and troubleshooting tools

Commands:
  mio debug config        show resolved configuration
  mio debug lsp           LSP debugging utilities
  mio debug rg            ripgrep debugging utilities
  mio debug file          file system debugging utilities
  mio debug scrap         list all known projects
  mio debug skill         list all available skills
  mio debug snapshot      snapshot debugging utilities
  mio debug startup       print startup timing
  mio debug agent <name>  show agent configuration details
  mio debug v2            debug v2 catalog and built-in plugins
  mio debug info          show debug information
  mio debug paths         show global paths (data, config, cache, state)
  mio debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio db --help 1`] = `
"mio db

database tools

Commands:
  mio db [query]     open an interactive sqlite3 shell or run a query                      [default]
  mio db path        print the database path
  mio db migrate     migrate JSON data to SQLite (merges with existing data)

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio mcp list --help 1`] = `
"mio mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio mcp add --help 1`] = `
"mio mcp add

add an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio mcp auth --help 1`] = `
"mio mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  mio mcp auth list  list OAuth-capable MCP servers and their auth status              [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio mcp logout --help 1`] = `
"mio mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio agent create --help 1`] = `
"mio agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio agent list --help 1`] = `
"mio agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`mio CLI help-text snapshots every documented command emits stable help text: mio db path --help 1`] = `
"mio db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
